<resources>
    <string name="app_name">Story App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_hint">Insert your email</string>
    <string name="password_hint">Insert your password</string>
    <string name="name">Name</string>
    <string name="name_hint">Insert your name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Insert your confirm password</string>
    <string name="back">You already have account? Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="error_message">Something wrong.\nPlease try again later.</string>
    <string name="image_error">image_error</string>
    <string name="ok">OK</string>
    <string name="success_create_user">Success register your account</string>
    <string name="user_image">User Image</string>
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="title_stories">Stories</string>
    <string name="empty_stories">Stories is not found</string>
    <string name="floating_button">Create Story</string>
    <string name="create_story">Create Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="submit">Submit</string>
    <string name="description_hint">Description</string>
    <string name="permission_denied">You need to allow Camera and Storage permissions for better experience with this app</string>
    <string name="success_create_story">Your story is created!</string>
    <string name="error_validation">Please make sure all the input field is correct!</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="detail_story">Detail Story</string>
    <string name="created_by">Created By</string>
    <string name="description">Description</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="title_maps">Map</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="retry">Retry</string>
    <string name="go_regist">You don\'t have an account? Register</string>
    <string name="detail_img">detail_img</string>
</resources>