<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_create_story"
            android:layout_width="321dp"
            android:layout_height="350dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/create_story"
            app:layout_constraintBottom_toTopOf="@+id/button_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imageadd"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/button_camera"
            android:layout_width="123dp"
            android:layout_height="65dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/camera"
            android:textColor="#4527A0"
            app:layout_constraintStart_toStartOf="@+id/iv_create_story"
            app:layout_constraintTop_toBottomOf="@+id/iv_create_story" />

        <Button
            android:id="@+id/button_galery"
            android:layout_width="123dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/gallery"
            android:textColor="#4527A0"
            app:layout_constraintEnd_toEndOf="@+id/iv_create_story"
            app:layout_constraintTop_toBottomOf="@+id/iv_create_story" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_add_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_galery">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:lines="10"
                android:maxLines="15"
                android:minLines="6"
                android:scrollbars="vertical"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buton_add"
            android:layout_width="174dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/submit"
            android:textColor="#4527A0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_add_description"
            tools:ignore="VisualLintButtonSize,VisualLintBounds" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
